fix jump of vh

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -172,7 +172,6 @@ body {
   }
 
   #about_me_text {
-    padding-top: 10%;
     font-size: 6vw;
     font-weight: 50;
     bottom: 78% !important;
